--- a/src/index.css
+++ b/src/index.css
@@ -108,7 +108,6 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 9999;
   contain: layout;
   view-transition-name: main-footer;
   z-index: 2;
@@ -117,7 +116,7 @@ body {
 .view-transition-container {
   view-transition-name: main-content;
   position: relative;
-  z-index: 1;
+  /* z-index: 1; */
 }
 
 /* @media screen and (max-width: 1024px) {
@@ -435,4 +434,26 @@ body {
   to {
     opacity: 0;
   }
+}
+
+input[type='range']::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 22px; /* Adjust this value to change thumb size */
+  height: 22px; /* Adjust this value to change thumb size */
+  background: #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+}
+
+input[type='range']::-moz-range-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 22px; /* Adjust this value to change thumb size */
+  height: 22px; /* Adjust this value to change thumb size */
+  background: #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
 }
