--- a/src/index.css
+++ b/src/index.css
@@ -90,17 +90,22 @@
   --page-transition-animation-timing-function: cubic-bezier(0.465, 0.183, 0.153, 0.946);
 }
 
+* {
+  margin: 0;
+}
+
 html,
 body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
   overflow-x: hidden;
   font-family: 'Lexend', sans-serif;
   overscroll-behavior: contain;
-  user-select: none;
   -webkit-user-select: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  touch-action: pan-x pan-y;
 }
 
 .bottom-nav-container {
@@ -111,78 +116,21 @@ body {
   contain: layout;
   view-transition-name: main-footer;
   z-index: 2;
+  overflow-x: hidden;
+}
+
+.mini-player {
+  contain: layout;
+  view-transition-name: mini-player;
+  z-index: 2;
+  overflow: hidden;
 }
 
 .view-transition-container {
   view-transition-name: main-content;
   position: relative;
-  /* z-index: 1; */
+  z-index: 1;
 }
-
-/* @media screen and (max-width: 1024px) {
-  ::view-transition-new(main-content),
-  ::view-transition-old(main-content) {
-    animation-duration: 400ms;
-    animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    animation-fill-mode: both;
-    z-index: 2;
-    animation-direction: normal;
-  }
-
-  ::view-transition-old(main-content) {
-    animation-name: slide-out;
-  }
-
-  ::view-transition-new(main-content) {
-    animation-name: slide-in;
-    mix-blend-mode: normal;
-  }
-
-  .back-transition::view-transition-new(main-content) {
-    animation-name: slide-out-reverse;
-    z-index: 1;
-  }
-
-  .back-transition::view-transition-old(main-content) {
-    animation-name: slide-in-reverse;
-    mix-blend-mode: normal;
-    z-index: 2;
-  }
-
-  .reload-transition::view-transition-new(main-content) {
-    animation-name: fade-in;
-    animation-duration: calc(2 * var(--page-transition-animation-duration));
-  }
-
-  .reload-transition::view-transition-old(main-content) {
-    animation-name: fade-out;
-  }
-} */
-
-/* ::view-transition-image-pair(main-content) {
-    perspective: 10000px;
-  }
-
-  ::view-transition-old(main-content) {
-    animation-name: scale-out;
-    z-index: 1;
-  }
-
-  ::view-transition-new(main-content) {
-    animation-name: scale-in;
-  }
-
-  .back-transition::view-transition-new(main-content) {
-    animation-name: scale-out-reverse;
-    z-index: 1;
-  }
-
-  .back-transition::view-transition-old(main-content) {
-    animation-name: scale-in-reverse;
-    mix-blend-mode: normal;
-    z-index: 0;
-  }
-} */
 
 @media screen and (max-width: 1024px) {
   ::view-transition-new(main-content),
@@ -195,6 +143,7 @@ body {
   ::view-transition-old(main-content) {
     animation-name: android-slide-out;
     opacity: 0;
+    overflow-x: hidden;
   }
 
   ::view-transition-new(main-content) {
@@ -202,12 +151,14 @@ body {
     mix-blend-mode: normal;
     z-index: 1;
     opacity: 0;
+    overflow-x: hidden;
   }
 
   .back-transition::view-transition-new(main-content) {
     animation-name: android-slide-out-reverse;
     z-index: 1;
     opacity: 1;
+    overflow-x: hidden;
   }
 
   .back-transition::view-transition-old(main-content) {
@@ -215,6 +166,7 @@ body {
     mix-blend-mode: normal;
     z-index: 1;
     opacity: 0;
+    overflow-x: hidden;
   }
 
   .reload-transition::view-transition-new(main-content) {
@@ -255,161 +207,6 @@ body {
 }
 
 @keyframes android-slide-in-reverse {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(100%);
-  }
-}
-
-@keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fade-out {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-
-/* @keyframes android-slide-out {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(-100%);
-  }
-}
-
-@keyframes android-slide-out-reverse {
-  from {
-    transform: translateX(-100%);
-  }
-  to {
-    transform: translateX(0);
-  }
-}
-
-@keyframes android-slide-in {
-  from {
-    transform: translateX(100%);
-  }
-  to {
-    transform: translateX(0);
-  }
-}
-
-@keyframes android-slide-in-reverse {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(100%);
-  }
-}
-
-@keyframes fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fade-out {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-
-
-@keyframes scale-out {
-  from {
-    transform: translateZ(0);
-    opacity: 1;
-  }
-  to {
-    transform: translateZ(5000px);
-    opacity: 0;
-  }
-}
-
-@keyframes scale-in {
-  from {
-    transform: translateZ(-5000px);
-    opacity: 0;
-  }
-  to {
-    transform: translateZ(0);
-    opacity: 1;
-  }
-}
-
-@keyframes scale-out-reverse {
-  from {
-    transform: translateZ(5000px);
-    opacity: 0;
-  }
-  to {
-    transform: translateZ(0);
-    opacity: 1;
-  }
-}
-
-@keyframes scale-in-reverse {
-  from {
-    transform: translateZ(0);
-    opacity: 1;
-  }
-  to {
-    transform: translateZ(-15000px);
-    opacity: 0;
-  }
-} */
-
-/* Slide */
-
-@keyframes slide-out {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(-20%);
-  }
-}
-
-@keyframes slide-out-reverse {
-  from {
-    transform: translateX(-20%);
-  }
-  to {
-    transform: translateX(0);
-  }
-}
-
-@keyframes slide-in {
-  from {
-    transform: translateX(100%);
-  }
-  to {
-    transform: translateX(0);
-  }
-}
-
-@keyframes slide-in-reverse {
   from {
     transform: translateX(0);
   }
