--- a/src/index.css
+++ b/src/index.css
@@ -108,7 +108,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Lexend', sans-serif;
+  font-family: 'Outfit', sans-serif;
   overscroll-behavior: contain;
   user-select: none;
   -webkit-user-select: none;
